fix(toast): support text wrap (#1107)

--- a/src/toast/toast.less
+++ b/src/toast/toast.less
@@ -69,6 +69,7 @@
     -webkit-line-clamp: 3;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+    white-space: pre-line;
 
     &--column:not(:empty) {
       margin-top: 16rpx;
